--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
 
 dependencies:
   path: ^1.8.0
-  json_path: ^0.5.0
+  json_path: '>=0.5.0 <0.9.0'
   args: ^2.4.2
 
 dev_dependencies:
